# abstract-machine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md  linker.ld
app/: CMakeLists.txt
app/cpu-test/: CMakeLists.txt  add-longlong.c  add.c  bit.c  bubble-sort.c  crc32.c  div.c  fact.c  fib.c  goldbach.c  hello-str.c  if-else.c  leap-year.c  load-store.c  matrix-mul.c  max.c  mersenne.c  min3.c  mov-c.c  movsx.c  mul-longlong.c  pascal.c  prime.c  quick-sort.c  recursion.c  select-sort.c  shift.c  shuixianhua.c  string.c  sub-longlong.c  sum.c  switch.c  to-lower-case.c  unalign.c  wanshu.c
cmake/toolchain/: riscv.cmake
include/ISA/: riscv.h
include/check/: check.h
include/klib/: klib_assert.h
include/platform/: platform.h
src/: CMakeLists.txt
src/check/: check.c
src/klib/: int64.c  stdio.c  string.c
src/platform/nemu/trm/: trm.c
